fix alignment of flag-icon

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -70,5 +70,6 @@ a, a:visited {
 
   .flag-icon {
     margin-left: 5px;
+    bottom: 3px;
   }
 }
